3.0.54

* Two new jars are needed to use Spinn3r with protocol buffers:

    lib/jzlib-1.0.7.jar (used for gzip decompression)
    lib/protobuf-java-2.0.3.jar (protocol buffer support)

* XML normalization rules are not applied in the new protobuf based client for
  HTML content.  This is not needed by most of our clients.  We will add a
  compatibility option for existing customers if this becomes a requirement.

* added support for protobuf based API which is 10x faster. The
  potobuf is 100% compatable execpt for the fact that white space
  normalasaton is not proformed on the content.

* fixed feedURL to be the link value and not the resouce. Added a api
  methoud to expoce the recouse so that the old incorrect value is also
  exposed so that clients that depend on the old broken behavor can
  still be made to work.