@@ -23,7 +23,6 @@ import java.util.*;
  * indexing, tiers, language, etc.
  */
 public class Config {
-    
 
     /**
      * When we've ran out of results (because the client is up to date) then we
@@ -43,11 +42,6 @@ public class Config {
      */
     public static String   DEFAULT_VERSION     = "3.0.54";
 
-    /**
-     * Default spam probability.
-     */
-    public static double DEFAULT_SPAM_PROBABILITY = 0.0;
-    
     private int            limit               = DEFAULT_LIMIT;
     private String         lang                = null;
     private String         version             = DEFAULT_VERSION;
@@ -56,7 +50,6 @@ public class Config {
     private String         firstRequestURL     = null;
     private boolean        skipDescription     = false;
     private String         api                 = null;
-    private double         spamProbability     = DEFAULT_SPAM_PROBABILITY;
     private boolean        useProtobuf         = false;
 
     /**
@@ -75,25 +68,6 @@ public class Config {
      */
     public void setUseProtobuf( boolean useProtobuf ) { 
         this.useProtobuf = useProtobuf;
-    }
-
-
-    /**
-     * 
-     * Get the value of <code>spamProbability</code>.
-     *
-     */
-    public double getSpamProbability() { 
-        return this.spamProbability;
-    }
-
-    /**
-     * 
-     * Set the value of <code>spamProbability</code>.
-     *
-     */
-    public void setSpamProbability( double spamProbability ) { 
-        this.spamProbability = spamProbability;
     }
 
     /**
